kubernetes/ingress-traefik.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
   #traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
   #traefik.ingress.kubernetes.io/router.tls: "true"
   #traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
   #cert-manager.io/issuer: "letsencrypt-cluster-issuer"
   traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  #tls:
  # hosts:
  #     - www.dsliz.info
    #secretName: tls-dsliz-ingress-http
  rules:
  - host: www.dsliz.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: www-dsliz-info
            port:
              number: 80      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
   #traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
   #traefik.ingress.kubernetes.io/router.tls: "true"
   #traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
   #cert-manager.io/issuer: "letsencrypt-cluster-issuer"
   traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.dsliz.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              number: 9000         
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
   #traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
   #traefik.ingress.kubernetes.io/router.tls: "true"
   #traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
   #cert-manager.io/issuer: "letsencrypt-cluster-issuer"
   traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  #tls:
  # hosts:
  #     - www.dsliz.info
    #secretName: tls-dsliz-ingress-http
  rules:
  - host: longhorn.dsliz.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80  
---

# apiVersion: v1
# kind: Secret
# metadata:
#   name: nginx-tls
#   namespace: default
# type: kubernetes.io/tls
# # The TLS secret must contain keys named 'tls.crt' and 'tls.key' that contain the certificate and private key to use for TLS.
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVvRENDQTRpZ0F3SUJBZ0lVWlRUMUZDV0F4TSs4VnVBNVFwSy9mYmt0ODdrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZc3hDekFKQmdOVkJBWVRBbFZUTVJrd0Z3WURWUVFLRXhCRGJHOTFaRVpzWVhKbExDQkpibU11TVRRdwpNZ1lEVlFRTEV5dERiRzkxWkVac1lYSmxJRTl5YVdkcGJpQlRVMHdnUTJWeWRHbG1hV05oZEdVZ1FYVjBhRzl5CmFYUjVNUll3RkFZRFZRUUhFdzFUWVc0Z1JuSmhibU5wYzJOdk1STXdFUVlEVlFRSUV3cERZV3hwWm05eWJtbGgKTUI0WERUSXpNVEl3TnpFek5UWXdNRm9YRFRNNE1USXdNekV6TlRZd01Gb3dZakVaTUJjR0ExVUVDaE1RUTJ4dgpkV1JHYkdGeVpTd2d [...]
#   tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRRFNIRjR3Njk5TTN4a3QKbzNsTkdRME04M0tkLzRqNFFIdG1PVndoK1d2b2NBZTVueDZ5SXEvTEpBQ25ENEdKMUxFVGNFbFdVdWdid3plLwpNTGpKRVZERUZZQy9ONnV5cjh4czFQYVRkeHhsZ0dUT2FBUG9CeEszRWR4UkxScHdmd0RQQUtsb0xZQ2lpZFBQCmNvRi96aTVTK2gyWUNyS2c5T0RnaDV0SDFCUVdxQnFRZXBFc0JkTFd1SFNGRWZXa2tzQ2pyUEpxT3o3YUh6c0kKOXZtTEFMVHhwMDVDQmZyYWRTclhsMHJvSHhpZkJDS2RETmR5Z2V4VHdHaUwxdjIrRG4zVDVGQWFsQ21OTFJ6YwoyNWhjT2dWTUh1c3l [...]

# ---

# kind: ClusterRole
# apiVersion: rbac.authorization.k8s.io/v1
# metadata:
#   name: traefik-role

# rules:
#   - apiGroups:
#       - ""
#     resources:
#       - services
#       - endpoints
#       - secrets
#     verbs:
#       - get
#       - list
#       - watch
#   - apiGroups:
#       - extensions
#       - networking.k8s.io
#     resources:
#       - ingresses
#       - ingressclasses
#     verbs:
#       - get
#       - list
#       - watch
#   - apiGroups:
#       - extensions
#       - networking.k8s.io
#     resources:
#       - ingresses/status
#     verbs:
#       - update

# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: traefik-account

# ---
# kind: ClusterRoleBinding
# apiVersion: rbac.authorization.k8s.io/v1
# metadata:
#   name: traefik-role-binding

# roleRef:
#   apiGroup: rbac.authorization.k8s.io
#   kind: ClusterRole
#   name: traefik-role
# subjects:
#   - kind: ServiceAccount
#     name: traefik-account
#     namespace: default # Using "default" because we did not specify a namespace when creating the ClusterAccount.


# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: traefik-dashboard-service

# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8080
#       targetPort: dashboard
#   selector:
#     app: traefik

# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: IngressName
#   namespace: default
# spec:
#   rules:
#   - host: foo.bar.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: ServiceName
#             port:
#               number: 80
